cmake_minimum_required(VERSION 3.12.3)
project(Test)
set(CMAKE_CXX_STANDARD  11)
set(BOOST_MIN_VERSION "1.69.0")
FIND_PACKAGE(Boost ${BOOST_MIN_VERSION} REQUIRED)
if (NOT Boost_FOUND)
    message("no find")
endif()
include_directories(${PROJECT_SOURCE_DIR}/incldue)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
add_definitions("-DBOOST_LOG_DYN_LINK")

add_executable(test test.cpp Hello.cpp log.cpp)

target_link_libraries(test boost_log_setup boost_log boost_system boost_thread boost_filesystem)
